[project]
name = "lunar-backtester"
version = "0.1.0"
description = "Backtesting engine for Lunar trading system"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
dependencies = [
    "lunar-core>=0.1.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "sqlalchemy>=2.0.0",
    "aiohttp>=3.8.0",
    "python-dateutil>=2.8.2",
    "requests>=2.31.0",
    "pyarrow>=15.0.0"
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
pip = ">=23.0.0"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=lunar_backtester --cov-report=term-missing"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/lunar_backtester"]

[tool.hatch.build.targets.sdist]
packages = ["src/lunar_backtester"] 