[project]
name = "lunar-trader"
version = "0.1.0"
description = "Trading engine and strategies for Lunar trading system"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = [
    "lunar-core>=0.1.0",
    "pydantic>=2.0.0",
    "aiohttp>=3.8.0"
]
requires-python = ">=3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/lunar_trader"]

[tool.hatch.build.targets.sdist]
packages = ["src/lunar_trader"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true 